# spotlight

./: Cargo.toml  README.md  flake.nix
book/: book.toml
lua/: .luarc.json
lua/spot-apps/: init.lua  spot-apps-0.0.0.rockspec
lua/spot-bluetooth/: init.lua  spot-bluetooth-0.0.0.rockspec
lua/spot-modes/: init.lua  spot-modes-0.0.0.rockspec
lua/spot-networks/: init.lua  spot-networks-0.0.0.rockspec
lua/spot-passwords/: init.lua  spot-passwords-0.0.0.rockspec
lua/spot-wiktionary/: init.lua  spot-apps-0.0.0.rockspec
spotlight/: Cargo.toml
spotlight-common/: Cargo.toml
spotlight-common/src/: engine.rs  error.rs  lib.rs
spotlight-engine/: Cargo.toml
spotlight-gtk/: Cargo.toml
spotlight-qt/: Cargo.toml
spotlight-tui/: Cargo.toml
